Example events (#264)
* initial

* covid 19 event

* only simulate events once

* more events

* fix percentages

* fix event calculation

* update samples accordingly

* Update api.yaml
